# ivt-hw-2023-mega-bite

./: .gitignore  README.md  flake8_output.txt  manuelTesting.py  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: Tests.yml  publish.yml
.scannerwork/: report-task.txt
algorithms-master/: CHANGELOG.md  manuelTesting.py  tox.ini
algorithms-master/.github/workflows/: publish.yml  python-app.yml
algorithms-master/algorithms/sort/: wiggle_sort.py
doc/: Static Analysis.md
docs/: IVT-assignment.md  IncreasingCoverage  Manual Testing.md  Mypy.md  Pip.md  flake8.md  pytest.md  workflow.md
machine_learning_basics-master/: README.md
src/algorithms.egg-info/: PKG-INFO  SOURCES.txt
src/algorithms/algorithms.egg-info/: PKG-INFO
src/algorithms/unix/path/: simplify_path.py
tests/: test_bfs.py  test_bit.py  test_unix.py
